[gd_scene load_steps=2 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="CanvasLayer" type="CanvasLayer" parent="Control"]

[node name="Control" type="Control" parent="Control/CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="Control/CanvasLayer/Control/VBoxContainer"]
margin_right = 600.0
margin_bottom = 512.0

[node name="TextureRect" type="TextureRect" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer"]
margin_left = 44.0
margin_right = 556.0
margin_bottom = 512.0
rect_min_size = Vector2( 512, 512 )
expand = true

[node name="CenterContainer2" type="CenterContainer" parent="Control/CanvasLayer/Control/VBoxContainer"]
margin_top = 516.0
margin_right = 600.0
margin_bottom = 752.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2"]
margin_left = 53.0
margin_right = 546.0
margin_bottom = 236.0

[node name="MarginContainer5" type="MarginContainer" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 493.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 28.0
margin_right = 493.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer"]
margin_top = 1.0
margin_right = 75.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "Seed"

[node name="MarginContainer" type="MarginContainer" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer"]
margin_left = 79.0
margin_right = 89.0
margin_bottom = 16.0
rect_min_size = Vector2( 10, 0 )

[node name="seed_slider" type="HSlider" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer"]
margin_left = 93.0
margin_right = 493.0
margin_bottom = 16.0
rect_min_size = Vector2( 400, 0 )
min_value = 1.0
value = 1.0

[node name="MarginContainer4" type="MarginContainer" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 48.0
margin_right = 493.0
margin_bottom = 72.0
rect_min_size = Vector2( 0, 24 )

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 76.0
margin_right = 493.0
margin_bottom = 92.0

[node name="Label" type="Label" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer2"]
margin_top = 1.0
margin_right = 75.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "octave"

[node name="MarginContainer" type="MarginContainer" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer2"]
margin_left = 79.0
margin_right = 89.0
margin_bottom = 16.0
rect_min_size = Vector2( 10, 0 )

[node name="octave_slider" type="HSlider" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer2"]
margin_left = 93.0
margin_right = 493.0
margin_bottom = 16.0
rect_min_size = Vector2( 400, 0 )
min_value = 1.0
max_value = 8.0
step = 0.001
value = 1.0

[node name="MarginContainer3" type="MarginContainer" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 96.0
margin_right = 493.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 24 )

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 124.0
margin_right = 493.0
margin_bottom = 140.0

[node name="Label" type="Label" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer3"]
margin_top = 1.0
margin_right = 75.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "period"

[node name="MarginContainer" type="MarginContainer" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer3"]
margin_left = 79.0
margin_right = 89.0
margin_bottom = 16.0
rect_min_size = Vector2( 10, 0 )

[node name="period_slider" type="HSlider" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer3"]
margin_left = 93.0
margin_right = 493.0
margin_bottom = 16.0
rect_min_size = Vector2( 400, 0 )
min_value = 16.0
max_value = 64.0
step = 0.1
value = 16.0

[node name="MarginContainer2" type="MarginContainer" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 144.0
margin_right = 493.0
margin_bottom = 168.0
rect_min_size = Vector2( 0, 24 )

[node name="HBoxContainer4" type="HBoxContainer" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 172.0
margin_right = 493.0
margin_bottom = 188.0

[node name="Label" type="Label" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer4"]
margin_top = 1.0
margin_right = 75.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "persistence"

[node name="MarginContainer" type="MarginContainer" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer4"]
margin_left = 79.0
margin_right = 89.0
margin_bottom = 16.0
rect_min_size = Vector2( 10, 0 )

[node name="persistence_slider" type="HSlider" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer4"]
margin_left = 93.0
margin_right = 493.0
margin_bottom = 16.0
rect_min_size = Vector2( 400, 0 )
max_value = 1.0
step = 0.001

[node name="MarginContainer" type="MarginContainer" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 192.0
margin_right = 493.0
margin_bottom = 216.0
rect_min_size = Vector2( 0, 24 )

[node name="HBoxContainer5" type="HBoxContainer" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 220.0
margin_right = 493.0
margin_bottom = 236.0

[node name="Label" type="Label" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer5"]
margin_top = 1.0
margin_right = 75.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "lacunarity"

[node name="MarginContainer" type="MarginContainer" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer5"]
margin_left = 79.0
margin_right = 89.0
margin_bottom = 16.0
rect_min_size = Vector2( 10, 0 )

[node name="lacunarity_slider" type="HSlider" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer5"]
margin_left = 93.0
margin_right = 493.0
margin_bottom = 16.0
rect_min_size = Vector2( 400, 0 )
min_value = 1.0
max_value = 6.0
step = 0.001
value = 1.0

[node name="MarginContainer6" type="MarginContainer" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer"]
visible = false
margin_top = 240.0
margin_right = 493.0
margin_bottom = 264.0
rect_min_size = Vector2( 0, 24 )

[node name="HBoxContainer6" type="HBoxContainer" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer"]
visible = false
margin_top = 268.0
margin_right = 493.0
margin_bottom = 284.0

[node name="Label" type="Label" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer6"]
margin_top = 1.0
margin_right = 75.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "fallof start"

[node name="MarginContainer" type="MarginContainer" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer6"]
margin_left = 79.0
margin_right = 89.0
margin_bottom = 16.0
rect_min_size = Vector2( 10, 0 )

[node name="fallof_start" type="HSlider" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer6"]
margin_left = 93.0
margin_right = 493.0
margin_bottom = 16.0
rect_min_size = Vector2( 400, 0 )
max_value = 1.0
step = 0.001
value = 0.5

[node name="MarginContainer7" type="MarginContainer" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer"]
visible = false
margin_top = 288.0
margin_right = 493.0
margin_bottom = 312.0
rect_min_size = Vector2( 0, 24 )

[node name="HBoxContainer7" type="HBoxContainer" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer"]
visible = false
margin_top = 316.0
margin_right = 493.0
margin_bottom = 332.0

[node name="Label" type="Label" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer7"]
margin_top = 1.0
margin_right = 75.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "fallof end"

[node name="MarginContainer" type="MarginContainer" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer7"]
margin_left = 79.0
margin_right = 89.0
margin_bottom = 16.0
rect_min_size = Vector2( 10, 0 )

[node name="fallof_end" type="HSlider" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer7"]
margin_left = 93.0
margin_right = 493.0
margin_bottom = 16.0
rect_min_size = Vector2( 400, 0 )
max_value = 1.0
step = 0.001
value = 1.0

[node name="MarginContainer5" type="MarginContainer" parent="Control/CanvasLayer/Control/VBoxContainer"]
margin_top = 756.0
margin_right = 600.0
margin_bottom = 780.0
rect_min_size = Vector2( 0, 24 )

[node name="CenterContainer3" type="CenterContainer" parent="Control/CanvasLayer/Control/VBoxContainer"]
margin_top = 784.0
margin_right = 600.0
margin_bottom = 864.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer3"]
margin_left = 184.0
margin_right = 416.0
margin_bottom = 80.0

[node name="Button2" type="Button" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_right = 100.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 80 )
size_flags_horizontal = 4
text = "Generate 2D"

[node name="MarginContainer" type="MarginContainer" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_left = 104.0
margin_right = 128.0
margin_bottom = 80.0
rect_min_size = Vector2( 24, 0 )

[node name="Button3" type="Button" parent="Control/CanvasLayer/Control/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_left = 132.0
margin_right = 232.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 80 )
size_flags_horizontal = 4
text = "Generate 3D"

[connection signal="drag_ended" from="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer/seed_slider" to="." method="_on_seed_slider_drag_ended"]
[connection signal="drag_ended" from="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer2/octave_slider" to="." method="_on_octave_slider_drag_ended"]
[connection signal="drag_ended" from="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer3/period_slider" to="." method="_on_period_slider_drag_ended"]
[connection signal="drag_ended" from="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer4/persistence_slider" to="." method="_on_persistence_slider_drag_ended"]
[connection signal="drag_ended" from="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer5/lacunarity_slider" to="." method="_on_lacunarity_slider_drag_ended"]
[connection signal="drag_ended" from="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer6/fallof_start" to="." method="_on_fallof_start_drag_ended"]
[connection signal="drag_ended" from="Control/CanvasLayer/Control/VBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer7/fallof_end" to="." method="_on_fallof_end_drag_ended"]
[connection signal="pressed" from="Control/CanvasLayer/Control/VBoxContainer/CenterContainer3/HBoxContainer/Button2" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Control/CanvasLayer/Control/VBoxContainer/CenterContainer3/HBoxContainer/Button3" to="." method="_on_Button3_pressed"]
